enhancements and support for more properties.

--- a/samples/.env.example
+++ b/samples/.env.example
@@ -17,3 +17,6 @@ NOTION_PROPERTY_COMPLETED="Completed"# Custom 'Date' property
 NOTION_PROPERTY_FILES_MEDIA="Files & media" # Custom 'Files' property
 NOTION_PROPERTY_PARENT_ITEM="Parent item"   # Custom 'Relation' property
 NOTION_PROPERTY_SUB_ITEM="Sub-item"         # Custom 'Relation' property
+NOTION_PROPERTY_TAGS="Tags"               # Custom 'Multi-select' property
+NOTION_PROPERTY_PARENT_TAGS="Parent Tags" # Custom 'Rollup' property
+NOTION_TAGS_LIST="Tag1,Tag2,Tag3"  # Comma-separated list of tags to be used in the NOTION_PROPERTY_TAGS property
